--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.9",
-    "expo-dev-client": "^5.1.8",
+    "expo-dev-client": "~5.1.8",
     "expo-location": "^18.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-ble-plx": "^3.5.0",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.0"
   },
